// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolshot components/Track/Track.tools.svelte: Default 1`] = `
<div>
  <div
    class="undefined root svelte-30dtyc"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-30dtyc"
    >
      <span
        class="title svelte-30dtyc"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With details 1`] = `
<div>
  <div
    class="undefined root svelte-30dtyc"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-30dtyc"
    >
      <span
        class="title svelte-30dtyc"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
    <div
      class="duration svelte-30dtyc"
    >
      2:06
    </div>
     
  </div>
</div>
`;

exports[`Toolshot components/Track/Track.tools.svelte: With menu 1`] = `
<div>
  <div
    class="undefined root svelte-30dtyc"
  >
    <a
      class="flex-none"
      href="#/album/1"
    >
      <img
        alt="./cover.jpg"
        class="h-16 w-16 text-xs actionable rounded-sm svelte-1psk6yi"
        height="256"
        loading="lazy"
        src="./cover.jpg"
        width="256"
      />
       
      
    </a>
     
    <div
      class="track svelte-30dtyc"
    >
      <span
        class="title svelte-30dtyc"
      >
        Mama got a girlfriend
      </span>
       
      <span>
        <a
          class="text-sm underlined"
          href="#/artist/0"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
      </span>
    </div>
     
     
    <span
      aria-expanded="false"
      aria-haspopup="menu"
      class="wrapper svelte-11prmkk"
    >
      <button
        class="iconOnly noBorder svelte-1e4q28k"
      >
        <i
          class="material-icons svelte-1e4q28k"
        >
          more_vert
        </i>
         
         
        
         
      </button>
    </span>
     
    
  </div>
</div>
`;
